# rerax

./: README.md  pyproject.toml
.github/actions/: ci.yml
src/rerax/: __init__.py  utils.py
src/rerax/data/: loader.py  processor.py  transforms.py
src/rerax/inference/: predictor.py
src/rerax/layers/: common.py  sasrec.py
src/rerax/models/: sasrec.py  two_tower.py
src/rerax/tasks/: base.py  generative.py  retrieval.py
src/rerax/tracking/: base.py  mlflow.py
src/rerax/training/: trainer.py
tests/data/: test_loader.py  test_processor.py  test_transform.py
tests/inference/: test_predictor.py
tests/layers/: test_sasrec_layer.py
tests/models/: test_sasrec.py  test_two_tower.py
tests/tasks/: test_generative_task.py  test_retrieval_task.py  test_task_inference.py
tests/tracking/: test_mlflow_tracker.py  test_tracker_integration.py
tests/training/: conftest.py  test_checkpointing.py  test_e2e_training.py  test_evaluation.py  test_retrieval_training.py  test_trainer.py
